Revamp (Fixed z-index and reordered achievements)

--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@
 }
 
 li {
-    margin: 5px
-    z-index = -1;
+    margin: 5px;
+    z-index: -1;
 }
 
 #navbar {
@@ -43,6 +43,7 @@ li {
 #navbar li {
     float: left;
     margin: 0px;
+    z-index: 10;
 }
 
 #navbar li a {
